--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -29,3 +29,33 @@
     border: 1px solid #3c3a3a;
     padding: 10px 40px;
 }
+
+.inventory-items-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 95%;
+    margin: 0 auto;
+    gap: 25px;
+}
+
+.inventory-item {
+    position: relative;
+    width: 500px;
+}
+
+.inventory-item img {
+    width: 625px;
+    border-radius: 10px;
+    height: 350px;
+    object-fit: cover;
+}
+
+.item-info {
+    position: absolute;
+    top: 0;
+    padding-left: 40px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
