--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -59,3 +59,33 @@
     flex-direction: column;
     justify-content: center;
 }
+
+.update-btn {
+    width: 25%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: #ff0e46;
+    padding: 8px;
+    border-radius: 25px;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+/* Footer design */
+.footer {
+    background: #070920;
+    color: white;
+    padding: 80px 0px;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.social-icon {
+    width: 30px;
+    border: 1px solid #515e52;
+    height: 30px;
+    border-radius: 50%;
+    padding: 5px;
+    margin-right: 15px;
+}
