--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -141,10 +141,8 @@
     display: block;
     margin: 0 auto;
     width: 70%;
-
     border-bottom: 2px solid #38d39f;
-
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 
 }
 
@@ -188,19 +186,9 @@
     margin-bottom: 14px;
 }
 
-.submit-type {
-    border: none;
-    padding: 8px;
-    font-weight: bold;
-    color: white;
-    background: #38d39f;
-    width: 52%;
-    border-radius: 50%;
-    margin-bottom: 14px;
-}
+
 
 .google-btn {
-    padding: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -211,7 +199,8 @@
     padding: 7px 0px;
     border-radius: 50%;
     font-weight: bold;
-    background: #a46da5;
+    background: #3a0760;
+    color: white;
 }
 
 .google-btn img {
