--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -243,3 +243,10 @@
     font-size: 45px;
     font-family: inherit;
 }
+
+/* section two style */
+.two-info img {
+    width: 350px;
+    height: 350px;
+    object-fit: cover;
+}
