--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -216,13 +216,18 @@
 }
 
 /* Section one css */
-.one-Container {
+.one-container {
+    padding: 40px 0px;
+}
+
+.one-info-Container {
     display: grid;
     grid-template-columns: 3fr 1fr;
     width: 95%;
     margin: 0 auto;
     margin-top: 80px;
     align-items: center;
+
 }
 
 .one-info h3 {
@@ -245,8 +250,67 @@
 }
 
 /* section two style */
+.two-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 95%;
+    margin: 0 auto;
+    gap: 35px;
+}
+
+.two-info {
+    border: 1px solid #d9d1d1;
+    width: 290px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
 .two-info img {
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    height: 250px;
     object-fit: cover;
+    border-radius: 18px;
+    margin-bottom: 20px;
+    padding: 7px;
+}
+
+.two-info button {
+    width: 100%;
+    border: none;
+    padding: 4px 0px;
+    font-weight: bold;
+    background: #04213e;
+    color: white;
+}
+
+.two-info h4 {
+    padding: 0px 15px;
+}
+
+.two-info p {
+    padding: 0px 15px;
+}
+
+.title-container {
+    margin-bottom: 40px;
+}
+
+.section-title {
+    width: 274px;
+    border-bottom: 3px solid #ff003b;
+    margin: 0 auto;
+    padding-bottom: 10px;
+}
+
+.two {
+    width: 138px;
+}
+
+.one {
+    width: 242px;
+}
+
+.bg-color {
+    background: whitesmoke;
+    padding: 40px 0px;
 }
