--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -30,12 +30,16 @@
     padding: 10px 40px;
 }
 
-.inventory-items-container {
+.single-inventory-items-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+
+    gap: 25px;
+}
+
+.inventory-items-container {
     width: 95%;
     margin: 0 auto;
-    gap: 25px;
 }
 
 .inventory-item {
@@ -317,11 +321,11 @@
 
 /* Banner */
 .site-banner {
-    background-image: url(../../images/slider-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 500px;
-    height: 80vh;
+    background: linear-gradient(#00000075, #00000075), linear-gradient(#00000075, #00000075), url(../../images/slider-1.jpg);
+    height: 90vh;
 }
 
 .banner-info-container {
@@ -337,6 +341,55 @@
     font-size: 55px;
     letter-spacing: 30px;
     font-family: cursive;
-    color: rebeccapurple;
+    color: #ff0052;
+    ;
     font-weight: bold;
+}
+
+.banner-info-container h2 {
+    font-family: arial black;
+    font-style: italic;
+    font-size: 40px;
+    line-height: 60px;
+    color: #c7c7c7;
+    letter-spacing: 6px;
+}
+
+.banner-info {
+    width: 303px;
+    position: relative;
+}
+
+.first-one {
+    position: absolute;
+    left: 114px;
+    top: 19px;
+    font-size: 17px;
+    font-style: italic;
+    color: #cc00ff
+}
+
+.second-one {
+    border-bottom: 2px solid #cc00ff;
+    width: 115px;
+    padding-bottom: 8px;
+    font-size: 22px;
+    font-style: italic;
+}
+
+/* see more */
+.see-more {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px;
+}
+
+.see-more button {
+    outline: none;
+    border: none;
+    padding: 1px 15px;
+    background-color: #200966;
+    font-weight: bold;
+    color: white;
+    border-radius: 25%;
 }
