--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -393,3 +393,62 @@
     color: white;
     border-radius: 25%;
 }
+
+/* update items css */
+.update-item-img img {
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.update-item-img {
+    width: 780px;
+    padding-right: 20px;
+}
+
+.update-item-container {
+    display: flex;
+
+}
+
+.update-item-info {
+    width: 620px;
+    border-left: 3px solid #ff33a4;
+    /* margin-left: 20px; */
+    padding-left: 20px;
+}
+
+.update-container {
+    width: 85%;
+    margin: 0 auto;
+    border: 3px solid #ff33a4;
+    margin-top: 40px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.product-id {
+    text-align: center;
+    border-bottom: 3px solid #ff33a4;
+    margin-bottom: 0;
+    padding: 8px 0px;
+    background: #f7f7f7;
+}
+
+.delivered {
+    border: none;
+    outline: none;
+    background: #ff0052;
+    color: white;
+    padding: 3px 13px;
+    border-radius: 30%;
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
+.update-form input {
+    border: 2px solid #ff0052;
+    border-radius: 5px;
+    margin-right: 12px;
+}
