--- a/src/Pages/AllCss/AllCss.css
+++ b/src/Pages/AllCss/AllCss.css
@@ -452,3 +452,45 @@
     border-radius: 5px;
     margin-right: 12px;
 }
+
+.add-new {
+    width: 85%;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 25px;
+}
+
+/* add items css */
+
+.add-new {
+    width: 85%;
+    margin: 0 auto;
+    /* border: 1px solid; */
+    text-align: center;
+    padding-top: 25px;
+}
+
+.form-container {
+    border: 1px solid;
+    width: 45%;
+    margin: 0 auto;
+    padding: 35px;
+}
+
+.form-container input,
+textarea {
+    width: 100%;
+    margin-bottom: 12px;
+    padding: 5px;
+    border: 2px solid #e5e5e5;
+    border-radius: 5px;
+}
+
+input.add_items {
+    background: #ff0047;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+}
